fixed spacing on tags and title of blog

--- a/public/css/blog/blog.scss
+++ b/public/css/blog/blog.scss
@@ -39,6 +39,7 @@ textarea {
 .blogTags-container {
     display: inline-flex;
     margin: 0 auto;
+    padding: 25px 0px;
     width: 100%;
 }
 
